fixed table page footer on small screens

--- a/lesson8/css/tablesmall.css
+++ b/lesson8/css/tablesmall.css
@@ -60,7 +60,6 @@ table, th, tr, td {
 }
 
 footer {
-    width: 60%;
     border-radius: 20px;
     background-color: #50514f;
     text-align: center;
